--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,254 +1,438 @@
 @import 'reset';
+@import 'fonts';
 
-$color: #31B447;
-$maxWidth: 1877;
-@mixin adaptiv-font($pcSize, $mobSize) {
-	$addSize: $pcSize - $mobSize;
-	$maxWidth: $maxWidth - 320;
-	font-size: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth}));
-}
+$color_white: #fff;
+$color_green: #6CEEC7;
+$color_error: #DA5050;
 
 body {
-    font-family: 'Roboto', sans-serif;
-    color: $color;
+    font-family: "Rubik";
+    font-weight: 500;
+    color: $color_white;
     font-size: 18px;
-    background-color: #fff;
+    background-color: rgb(124, 124, 124);
+}
+.green_text{
+    color: $color_green;
 }
 
-.container {
-    width: 98%;
-    max-width: 1877px;
-    margin: 0 auto;
 
-    @media screen and (max-width: 980px){
-        width: 96%;
+/* First Screen */
+
+.first_screen{
+    height: 100vh;
+    background: url(../img/bg-1.jpg) no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+    overflow: hidden;
+
+}
+.icon_bg{
+    max-width: 150px;
+    @media screen and (max-width: 660px){
+        max-width: 74px;
     }
 }
+.icon_bg_1{
+    position: absolute;
+    right: 15%;
+    top: -20px;
+    @media screen and (max-width: 660px){
+        top: 0;
+        left: -20px;
+    }
+}
+.icon_bg_2{
+    position: absolute;
+    left: -30px;
+    top: 20%;
+    @media screen and (max-width: 660px){
+        left: auto;
+        right: -26px;
+        top: 16%;
+    }
+}
+.icon_bg_3{
+    position: absolute;
+    right: -30px;
+    bottom: 10%;
+    @media screen and (max-width: 660px){
+        right: auto;
+        left: -20px;
+        bottom: 4%;
+    }
+}
+.logo__wrap{
+    margin-bottom: 40px;
+    @media screen and (max-width: 780px){
+       margin-bottom: 10px;
+    }
+    .logo{
+        width: 190px;
+        max-height: 48px;
 
-.title{
-    font-weight: 900;
-    color: #000;
-    @include adaptiv-font(40, 24);
-    margin-bottom: 20px;
-    white-space: nowrap;
-    overflow: hidden;
-    -o-text-overflow: ellipsis;
-       text-overflow: ellipsis;
+        @media screen and (max-width: 780px){
+            width: 160px;
+        }
+        @media screen and (max-width: 460px){
+           width: 120px;
+        }
+    }
+}
+.main_title{
+    font-size: 62px;
+    max-width: 652px;
+    margin: 0 auto;
+    margin-bottom: 40px;
+
+    @media screen and (max-width: 780px){
+        font-size: 40px;
+    }
+    @media screen and (max-width: 460px){
+        font-size: 30px;
+    }
+}
+.btn{
+    padding: 15px 46px;
+    border: 2px solid $color_green;
+    color: $color_green;
+    border-radius: 5px;
+    font-size: 19px;
+    line-height: 22px;
+    text-decoration: none;
+
+    &:hover{
+        -webkit-transition: .3s;
+        -o-transition: .3s;
+        transition: .3s;
+        background-color: $color_green;
+        color: #000;
+    }
+    @media screen and (max-width: 460px){
+        width: 100%;
+        padding: 10px 46px;
+     }
 }
 
+/* contact_section */
 
+.contact_section{
+    height: 100vh;
+    background: url(../img/bg-2.jpg) no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+    overflow: hidden;
 
-/* Header */
+    @media screen and (max-width: 768px){
+        height: auto;
+        padding: 100px 0 50px;
+     }
+}
+.icon_bg_4{
+    position: absolute;
+    left: -40px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+    @media screen and (max-width: 768px){
+        top: 16%;
+        left: -20px;
+        max-width: 50px;
+    }
+}
+.icon_bg_5{
+    position: absolute;
+    right: -50px;
+    top: 12%;
+    @media screen and (max-width: 768px){
+        top: -25px;
+        right: -20px;
+    }
+}
+.icon_bg_6{
+    position: absolute;
+    right: 25%;
+    bottom: -20px;
+    @media screen and (max-width: 768px){
+        right: -20px;
+        bottom: -20px;
+    }
+}
+.contact_title{
+    font-size: 24px;
+    margin-bottom: 50px;
 
-.header{
-    height: 100px;
+    @media screen and (max-width: 768px){
+        font-size: 19px;
+     }
+}
+.form {
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-pack: justify;
+       -ms-flex-pack: justify;
+           justify-content: space-between;
+   -ms-flex-wrap: wrap;
+       flex-wrap: wrap;
+   max-width: 630px;
+   margin: 0 auto;
+   text-align: left;
+
+   @media screen and (max-width: 768px){
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+    }
+  }
+  
+  .form-item {
+    vertical-align: top;
+    position: relative;
+    width: calc(50% - 15px);
+    margin-bottom: 30px;
+
+    @media screen and (max-width: 768px){
+        width: 100%;
+    }
+    .err{
+        position: absolute;
+        right: 0;
+        bottom: -20px;
+        font-size: 10px;
+        color: $color_error;
+    }
+
+    .form-input {
+        width: 100%;
+        height: 54px;
+        padding: 8px 50px 2px;
+        color: #E0E0E0;
+        font-weight: 300;
+        border: 1px solid #FFFFFF;
+        border-radius: 4px;
+        background-color: transparent;
+
+        &:focus{
+            outline: none;
+            border: 1px solid $color_green;
+            -webkit-transition: 0.3s;
+            -o-transition: 0.3s;
+            transition: 0.3s;
+        }
+    }
+    input:focus+.form-label,
+    input:not(:placeholder-shown)+.form-label {
+        top: -10px;
+        font-size: 11px;
+        line-height: 40px;
+        color: $color_green;
+    }
+    ::-webkit-input-placeholder {
+         opacity: 0;
+    }
+          
+    input:focus::-webkit-input-placeholder {
+        opacity: 1;
+    }
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+    }
+    .form-icon{
+        position: absolute;
+        left: 15px;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+                transform: translateY(-50%);
+        width: 24px;
+        height: 24px;
+    }
+      
+    .form-label {
+        position: absolute;
+        pointer-events: none;
+        left: 50px;
+        right: 15px;
+        top: 0;
+        white-space: nowrap;
+        overflow: hidden;
+        font-size: 19px;
+        font-weight: 300;
+        color: #E0E0E0;
+        line-height: 54px;
+        -webkit-transition: .3s;
+        -o-transition: .3s;
+        transition: .3s;
+    }
+    .select-label{
+        top: -10px;
+        font-size: 11px;
+        line-height: 40px;
+        color: $color_green;
+    }
+}
+.form-item_select{
+   &::before{
+        content: '';
+        position: absolute;
+        top: 16px;
+        right: 20px;
+        -webkit-transform: translateY(50%);
+            -ms-transform: translateY(50%);
+                transform: translateY(50%);
+        width: 14px;
+        height: 14px;
+        border-top: 3px solid #fff;
+        border-right: 3px solid #fff;
+        -webkit-transform: rotate(135deg);
+            -ms-transform: rotate(135deg);
+                transform: rotate(135deg);
+        cursor: pointer;
+    } 
+}
+.form_select{
+    cursor: pointer;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+    
+    
+    option{
+        color: #5E5E5E;
+        font-weight: 300;
+    }
+}
+.checkbox_wrap{
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -webkit-box-shadow: 0 4px 14px 0 rgba(0, 0, 0, .25);
-            box-shadow: 0 4px 14px 0 rgba(0, 0, 0, .25);
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000;
-    background-color: #fff;
 
-    &.fixed {
-        background-color: rgba(255, 255, 255, 0.7);
-        -webkit-backdrop-filter: blur(3px);
-                backdrop-filter: blur(3px);
-        height: 80px;
-    }
-    &__logo{
-        max-width: 256px;
-        width: 60%;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-pack: start;
-            -ms-flex-pack: start;
-                justify-content: flex-start;
-        -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
-
-        &__img{ 
-            width: 100%;
-        }
-    }
-}
-
-/* Main */
-
-main{
-    padding-top: 100px;
-}
-
-.chargers{
-    padding: 32px 0;
-    margin-bottom: 100px;
-}
-.list{
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-
-    @media screen and (max-width: 550px){
-        -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center;
-    }
-}
-.item{
-    width: calc(50% - 7px);
-    -webkit-box-shadow: 0px 2px 8px 4px rgba(0, 0, 0, 0.25);
-            box-shadow: 0px 2px 8px 4px rgba(0, 0, 0, 0.25);
-    background-color: #fff;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    margin-bottom: 10px;
-
-    @media screen and (max-width: 1200px){
-        width: 100%;
-    }
-    @media screen and (max-width: 750px){
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
-        -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
-        margin-bottom: 20px;
-    }
-
-    &__info{
-        width: 45%;
-        position: relative;
-        padding: 40px 20px 90px 50px;
-
-        @media screen and (max-width: 1200px){
-            width: 60%;
-         }
-
-        @media screen and (max-width: 750px){
-            width: 100%;
-            padding: 20px;
-        }
-    }
-
-    &__links{
-        padding: 30px 0;
-        max-height: 226px;
-        overflow-y: auto;
-    }
-    &__link{
-        margin-bottom: 30px;
-        // overflow: hidden;
-        // text-overflow: ellipsis;
-        &:last-child{
-            margin-bottom: 0;
-        }
-
-        a{
-            font-family: 'Roboto', sans-serif;
-            color: #31B447;
-            @include adaptiv-font(18, 16);
-            text-decoration: none;
-            position: relative;
-            &::before{
-                content: '';
-                width: 100%;
-                height: 1px;
-                background-color: #228332;
-                position: absolute;
-                left: 0;
-                bottom: -5px;
-                -webkit-transform: scaleX(0);
-                    -ms-transform: scaleX(0);
-                        transform: scaleX(0);
-                -webkit-transform-origin: left;
-                    -ms-transform-origin: left;
-                        transform-origin: left;
-            }
-
-            &:hover{
-                a{
-                    color: #0b4615;
-                }
-                &::before{
-                    -webkit-transform: scaleX(1);
-                        -ms-transform: scaleX(1);
-                            transform: scaleX(1);
-                    -webkit-transition: all ease .3s;
-                    -o-transition: all ease .3s;
-                    transition: all ease .3s;
-                }
-            }
-        }
-    }
-
-    &__logos{
+    .custom-checkbox{
         position: absolute;
-        left: 50px;
-        bottom: 24px;
-        width: 100%;
-        &__wrap{
-            width: 60%;
-            display: -webkit-box;
-            display: -ms-flexbox;
-            display: flex;
-            gap: 10px;
-        }
-        img{
-            max-width: 134px;
-            width: 48%;
-        }
+        z-index: -1;
+        opacity: 0;
 
-
-        @media screen and (max-width: 750px){
-            position: static;
-            padding-top: 20px;
-        }
-    }
-
-    .picture{
-        width: 55%;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center;
-
-        &__wrap{
-            width: 100%;
-            height: 100%;
-            img{
-                width: 100%;
-                height: 100%
+        &:checked+label{
+            &::before{
+                background-image: url("../img/svg/check_icon.svg");
+                background-size: cover;
             }
         }
+    }
 
-        @media screen and (max-width: 750px){
-            width: 70%;
+    .text_agree, .text_agree2{
+        font-weight: 300;
+        font-size: 15px;
+        display: -webkit-inline-box;
+        display: -ms-inline-flexbox;
+        display: inline-flex;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-user-select: none;
+           -moz-user-select: none;
+            -ms-user-select: none;
+                user-select: none;
+        cursor: pointer;
+
+        &::before {
+            content: '';
+            display: inline-block;
+            cursor: pointer;
+            width: 20px;
+            height: 20px;
+            border-radius: 3px;
+            margin-right: 10px;
+            background-color: $color_green;
+        }
+    }
+    .text_agree2{
+        &::before{
+            background-color: #DA5050;
+        }
+    }
+    .agree_link{
+        color: $color_green;
+        text-decoration: none;
+        position: relative;
+        
+        &::after{
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 1px;
+            background-color: $color_green;
+        }
+    }
+}
+.log_in{
+    position: absolute;
+    bottom: 15px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+    font-weight: 300;
+    font-size: 15px;
+
+    @media screen and (max-width: 768px){
+        position: static;
+     }
+   
+    .log_link{
+        color: $color_green;
+        text-decoration: none;
+        position: relative;
+
+        &::after{
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: -2px;
+            width: 100%;
+            height: 1px;
+            background-color: $color_green;
         }
     }
 }
 
-.archive_title{
-    margin-bottom: 100px;
+
+#top_panel {
+    position: fixed;
+    width: 100%;
+    left: 0;
+    top: 0;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    font-size: 20px;
+    background-color: rgba(90, 90, 90, .8);
+    color: #fff;
+    z-index: 10000;
 }
+#top_panel.panel_success {
+    background-color: rgba(9, 153, 20, .8);
+}
+#top_panel.panel_warning {
+    background-color: rgba(235, 166, 13, .8);
+}
+
+
+
+
+
+
+
+
+
